public/style.css
#body {
  font-family: 'Rock Salt', cursive;
  background-color: #f6f6f4;
}

input,
textarea {
  background-color: #f6f6f4;
  padding-left: 0.5rem;
}

.btn.btn-primary {
  color: #f6f6f4;
}

select.form-control {
  width: 50%;
  padding: 0;
  background-color: #ffff;
  box-shadow: 5px 10px rgb(60, 79, 118, 0.8);
  margin: 1rem;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em 0.5em 1em 1.5em;
  font-family: 'Rock Salt', cursive;
  color: #111344;
  transition: color 0.3s ease;
  text-decoration: underline solid white;
}

/* form div {
  margin: 1em;
  display: inline-block;
} */

.logo {
  font-family: 'Rock Salt', cursive;
  margin-top: 20px;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

textarea {
  height: 400px;
}

label {
  font-weight: bold;
  margin-top: 20px;
}

.logoContainer {
  display: flex;
  justify-content: center;
}

.navContainer {
  background-color: #cfc7d2;
  color: #111344;
  border-bottom: 1px solid #111344;
  box-shadow: 0px 10px rgb(60, 79, 118, 0.8);
}

.buttonContainer {
  width: 100%;
  display: flex;
  justify-content: space-around;
  padding: 20px;
}

.navLinks {
  display: flex;
}

.navLinks a {
  margin-top: 40px;
}

.navLinks a:hover {
  color: #ff670f;
  text-decoration: underline solid white;
}

.formContainer button:hover,
.formContainer a:hover,
.recipeFormContainer button:hover {
  color: #ff670f;
}

.formContainer input:hover,
select.form-control:hover {
  box-shadow: 5px 10px rgb(255, 103, 15, 0.8);
}

.formContainer input:focus,
select.form-control:focus {
  outline: none;
  box-shadow: 5px 10px rgb(255, 103, 15, 0.8);
}

.recipeDetails {
  display: flex;
  flex-direction: column;
  font-family: 'Rock Salt', cursive;
  padding: 40px;
  align-items: center;
  color: #111344;
}

.recipeDetails p {
  width: 100%;
  white-space: pre-wrap;
}

.recipeDetails h5 {
  margin-top: 2rem;
  margin-bottom: 2rem;
  text-decoration: solid underline #ff670f;
  color: #111344;
}

.recipeDetails h3 {
  margin-bottom: 2rem;
  text-decoration: solid underline #ff670f;
  color: #111344;
}

.recipeDetails img {
  max-width: 90%;
  height: auto;
}

.formContainer {
  padding-top: 60px;
}

.formContainer input {
  width: 100%;
  border: 1px solid #111344;
  transition: box-shadow 0.3s ease;
  box-shadow: 5px 10px rgb(60, 79, 118, 0.8);
  border-radius: 5px;
  background-color: #ffff;
}

.formContainer p {
  font-family: 'Rock Salt', cursive;
  margin-top: 20px;
}

.inputContainer {
  margin-bottom: 2rem;
  width: 70%;
}

.inputContainer input {
  height: 2.7em;
}

::placeholder {
  font-family: FontAwesome, 'Open Sans', Verdana, sans-serif;
  font-size: 1.5em;
  padding-left: 5px;
  margin-top: 2em;
  color: #cfc7d2;
}

label {
  font-family: 'Rock Salt', cursive;
}

.addRecipeButtonContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.welcome {
  display: flex;
  flex-direction: row;
  font-family: 'Rock Salt', cursive;
  margin-top: 20px;
  margin-left: 20px;
  padding-bottom: 3rem;
  color: #111344;
  text-decoration: solid underline #ff670f;
}
.recipeFormContainer {
  padding-top: 1rem;
}

.recipeFormContainer input[type='text'] {
  height: 2.7rem;
}

.recipeFormContainer input,
.recipeFormContainer textarea {
  margin-bottom: 1rem;
  width: 70%;
  background-color: #ffff;
  border: 1px solid #111344;
  transition: box-shadow 0.3s ease;
  box-shadow: 5px 10px rgb(60, 79, 118, 0.8);
  border-radius: 5px;
}

.recipeFormContainer input:hover,
.recipeFormContainer textarea:hover {
  box-shadow: 5px 10px rgb(255, 103, 15, 0.8);
}

.recipeFormContainer input:focus,
.recipeFormContainer textarea:focus {
  outline: none;
  box-shadow: 5px 10px rgb(255, 103, 15, 0.8);
}

.recipeFormContainer label {
  margin-bottom: 2rem;
}

.text-center a {
  color: #111344;
  transition: box-shadow 0.3s ease;
}

.text-center a:hover {
  color: #111344;
  box-shadow: 5px 10px rgb(255, 103, 15, 0.8);
  text-decoration: none;
}

.text-center p {
  border-bottom: 1px #cfc7d2 solid;
}

.editButtonContainer {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.editButtonContainer button:hover,
.editButtonContainer a:hover {
  color: #ff670f;
}

.deleteButtonContainer {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.deleteButtonContainer button:hover {
  color: #111344;
}

input {
  text-overflow: ellipsis;
}

input,
textarea {
  border-radius: 0;
}

.addRecipeButtonContainer button:hover,
.addRecipeButtonContainer a:hover {
  color: #ff670f;
}

label.custom-file-label {
  margin: 0;
}

.intro {
  display: flex;
  justify-content: center;
  font-family: 'Rock Salt', cursive;
  width: 100%;
  margin-top: 2rem;
}

.introText {
  width: 70%;
  text-align: justify;
  border: solid #111344 1px;
  border-radius: 5px;
  box-shadow: 5px 10px rgb(60, 79, 118, 0.8);
  background-color: #ffff;
  color: #111344;
  padding: 2rem 2rem 1rem 2rem;
}

.highlight {
  color: #ff670f;
}

select {
  text-align: center;
  text-align-last: center;
  /* webkit*/
}
option {
  text-align: left;
  /* reset to left*/
}

#print {
  width: 100%;
  display: flex;
  flex-direction: column;
  font-family: 'Rock Salt', cursive;
  padding: 40px;
  align-items: center;
}

@media print {
  .editButtonContainer {
    display: none;
  }
  .navLinks {
    display: none;
  }
  .rating {
    display: none;
  }
}

.shoppingList p {
  width: 100%;
  white-space: pre-wrap;
}

.headline-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2rem;
  margin-bottom: 1rem;
  color: #111344;
  text-decoration: solid underline #ff670f;
}

.shoppingList form {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  color: #111344;
}

.shoppingList input {
  margin-right: 2rem;
}

.emptyShoppingList {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 4rem;
  color: #ff670f;
  text-decoration: underline solid #111344;
  font-size: 1.3rem;
}

.searchForm input {
  margin-bottom: 1em;
}

p.rating {
  font-family: FontAwesome, 'Open Sans', Verdana, sans-serif;
}

.ratingContainer {
  display: flex;
  align-items: center;
}

.error {
  color: #ff670f;
  height: 2rem;
}

.user-error {
  color: #ff670f;
  margin-top: 1rem;
}

.input-container label,
.recipeFormContainer label {
  color: #111344;
  text-decoration: underline solid #ff670f;
}

.input-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.emptyMessage {
  color: #ff670f;
  text-decoration: underline solid #111344;
  font-size: 1.3rem;
}

/* select:hover {
  box-shadow: 0 0 10px 100px #ff670f inset;
} */

